--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ djangorestframework==3.13.1
 djangorestframework_simplejwt==5.2.2
 pytz==2023.3
 rest_framework_simplejwt==0.0.1
-
+django-cors-headers
 
 
 
