--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ djangorestframework_simplejwt==5.2.2
 pytz==2023.3
 rest_framework_simplejwt==0.0.1
 django-cors-headers
-
+phonenumbers
+Pillow
 
 
 # /home/ubuntu/project/cabenv
