--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,6 +6,6 @@ server {
   
     location / {
         include proxy_params;
-        proxy_pass http://unix:/run/gunicorn.sock;
+        proxy_pass http://13.127.99.50:80;
     }
 }
