--- a/gunicorn/gunicorn.service
+++ b/gunicorn/gunicorn.service
@@ -2,14 +2,16 @@
 Description=gunicorn daemon
 Requires=gunicorn.socket
 After=network.target
+
 [Service]
-User=root
+User=ubuntu
 Group=www-data
-WorkingDirectory=/root/personal_cab/cars
-ExecStart=/root/personal_cab/env/bin/gunicorn \
+WorkingDirectory=/home/ubuntu/personal_cab
+ExecStart=/home/ubuntu/env/bin/gunicorn \
           --access-logfile - \
           --workers 3 \
           --bind unix:/run/gunicorn.sock \
           cars.wsgi:application
+
 [Install]
 WantedBy=multi-user.target
