--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,8 @@
-
 server {
-    listen 80 default_server;
-    server_name 3.109.32.40;
-   
+    listen 80;
+    server_name 15.207.20.204;
+
+
     location / {
         include proxy_params;
         proxy_pass http://unix:/run/gunicorn.sock;
