resolved cors error.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name bestdeveloper.in;
+    server_name bestdeveloper.in www.bestdeveloper.in;
 
 
     location / {
