--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 15.207.20.204 bestdeveloper.in www.bestdeveloper.in;
+    server_name 15.207.20.204;
 
 
     location / {
